slider para grupo de 3 procedimentos

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
 
         <section class="wrapper">
-            <div class="next">
+            <div class="prev">
                 <svg xmlns="http://www.w3.org/2000/svg" width="70" height="71" viewBox="0 0 70 71" fill="none">
                     <rect x="-1.5" y="1.5" width="67" height="67" rx="33.5"
                         transform="matrix(-1 -8.74228e-08 -8.74228e-08 1 67 0.0699462)" stroke="#3D6E6B" stroke-width="3" />
@@ -40,6 +40,7 @@
                         stroke-linecap="round" />
                 </svg>
             </div>
+            <div class="slider">
             <div class="carrossel">
                 <div class="carrossel-img">
                     <img src="./assets/massagem-bucha.png" width="350" height="320" alt="img-bucha">
@@ -70,6 +71,8 @@
                     <span class="value">R$ 100,00</span>
                 </div>
             </div>
+        </div>
+        <div class="slider">
             <div class="carrossel">
                 <div class="carrossel-img">
                     <img src="./assets/massagem-bucha.png" width="350" height="320" alt="img-bucha">
@@ -100,6 +103,8 @@
                     <span class="value">R$ 100,00</span>
                 </div>
             </div>
+        </div>
+        <div class="slider">
             <div class="carrossel">
                 <div class="carrossel-img">
                     <img src="./assets/massagem-bucha.png" width="350" height="320" alt="img-bucha">
@@ -130,6 +135,7 @@
                     <span class="value">R$ 100,00</span>
                 </div>
             </div>
+        </div>
             <div class="next">
                 <svg xmlns="http://www.w3.org/2000/svg" width="70" height="71" viewBox="0 0 70 71" fill="none">
                     <rect x="1.5" y="-1.5" width="67" height="67" rx="33.5" transform="matrix(1 0 0 -1 0 67.0698)"
