--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./style.css" />
+    <script defer src="js/swiper-bundle.min.js"></script>
     <script defer src="./script.js"></script>
     <title>D'ALILA ESTÉTICA</title>
   </head>
 
   <body>
+        <section>
             <img class="line7" src="./assets/Line 7.png" alt="linha-divisória">
 
             <div id="procedimentos" class="procedimentos">
@@ -30,135 +33,108 @@
                 <p class="menu">Outros</p>
             </div>
         </section>
-
-        <section class="wrapper">
-            <div class="prev">
-                <svg xmlns="http://www.w3.org/2000/svg" width="70" height="71" viewBox="0 0 70 71" fill="none">
-                    <rect x="-1.5" y="1.5" width="67" height="67" rx="33.5"
-                        transform="matrix(-1 -8.74228e-08 -8.74228e-08 1 67 0.0699462)" stroke="#3D6E6B" stroke-width="3" />
-                    <path d="M41 17.0699L23.15 34.9199L41 52.7699" stroke="#3D6E6B" stroke-width="3"
-                        stroke-linecap="round" />
-                </svg>
-            </div>
-            <div class="slider">
-            <div class="carrossel">
-                <div class="carrossel-img">
-                    <img src="./assets/massagem-bucha.png" width="350" height="320" alt="img-bucha">
+        <section class="slider">
+            <div class="container swiper">
+                <div class="slide-container">
+                  <div class="card-wrapper swiper-wrapper">
+                        <div class="card swiper-slide">
+                            <div class="image-box">
+                                <img src="./assets/massagem-bucha.png" alt="" />
+                            </div>
+                            <p class="procedure">Pindas chinesas</p>
+                            <div class="carrossel-price">
+                                <span>30 - 40 minutos</span>
+                                <span class="value">R$ 100,00</span>
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <div class="image-box">
+                                <img src="./assets/massagempedras.png" alt="" />
+                            </div>
+                            <p class="procedure">Pedras quentes</p>
+                            <div class="carrossel-price">
+                                <span>30 - 40 minutos</span>
+                                <span class="value">R$ 100,00</span>
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <div class="image-box">
+                                <img src="./assets/massagem-pernas.png" alt="" />
+                            </div>
+                            <p class="procedure">Bambuterapia</p>
+                            <div class="carrossel-price">
+                                <span>30 - 40 minutos</span>
+                                <span class="value">R$ 100,00</span>
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <div class="image-box">
+                                <img src="./assets/massagem-bucha.png" alt="" />
+                            </div>
+                            <p class="procedure">Pindas chinesas</p>
+                            <div class="carrossel-price">
+                                <span>30 - 40 minutos</span>
+                                <span class="value">R$ 100,00</span>
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <div class="image-box">
+                                <img src="./assets/massagempedras.png" alt="" />
+                            </div>
+                            <p class="procedure">Pedras quentes</p>
+                            <div class="carrossel-price">
+                                <span>30 - 40 minutos</span>
+                                <span class="value">R$ 100,00</span>
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <div class="image-box">
+                                <img src="./assets/massagem-pernas.png" alt="" />
+                            </div>
+                            <p class="procedure">Bambuterapia</p>
+                            <div class="carrossel-price">
+                                <span>30 - 40 minutos</span>
+                                <span class="value">R$ 100,00</span>
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <div class="image-box">
+                                <img src="./assets/massagem-bucha.png" alt="" />
+                            </div>
+                            <p class="procedure">Pindas chinesas</p>
+                            <div class="carrossel-price">
+                                <span>30 - 40 minutos</span>
+                                <span class="value">R$ 100,00</span>
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <div class="image-box">
+                                <img src="./assets/massagempedras.png" alt="" />
+                            </div>
+                            <p class="procedure">Pedras quentes</p>
+                            <div class="carrossel-price">
+                                <span>30 - 40 minutos</span>
+                                <span class="value">R$ 100,00</span>
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <div class="image-box">
+                                <img src="./assets/massagem-pernas.png" alt="" />
+                            </div>
+                            <p class="procedure">Bambuterapia</p>
+                            <div class="carrossel-price">
+                                <span>30 - 40 minutos</span>
+                                <span class="value">R$ 100,00</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <p class="procedure">Pindas chinesas</p>
-                <div class="carrossel-price">
-                    <span>30 - 40 minutos</span>
-                    <span class="value">R$ 100,00</span>
-                </div>
-            </div>
-            <div class="carrossel">
-                <div class="carrossel-img">
-                    <img src="./assets/massagempedras.png" width="320" height="320" alt="img-pedras">
-                </div>
-                <p class="procedure">Pedras quentes</p>
-                <div class="carrossel-price">
-                    <span>30 - 40 minutos</span>
-                    <span class="value">R$ 100,00</span>
-                </div>
-            </div>
-            <div class="carrossel">
-                <div class="carrossel-img">
-                    <img src="./assets/massagem-pernas.png" width="320" height="320" alt="img-pernas">
-                </div>
-                <p class="procedure">Bambuterapia</p>
-                <div class="carrossel-price">
-                    <span>30 - 40 minutos</span>
-                    <span class="value">R$ 100,00</span>
-                </div>
-            </div>
-        </div>
-        <div class="slider">
-            <div class="carrossel">
-                <div class="carrossel-img">
-                    <img src="./assets/massagem-bucha.png" width="350" height="320" alt="img-bucha">
-                </div>
-                <p class="procedure">Pindas chinesas</p>
-                <div class="carrossel-price">
-                    <span>30 - 40 minutos</span>
-                    <span class="value">R$ 100,00</span>
-                </div>
-            </div>
-            <div class="carrossel">
-                <div class="carrossel-img">
-                    <img src="./assets/massagempedras.png" width="320" height="320" alt="img-pedras">
-                </div>
-                <p class="procedure">Pedras quentes</p>
-                <div class="carrossel-price">
-                    <span>30 - 40 minutos</span>
-                    <span class="value">R$ 100,00</span>
-                </div>
-            </div>
-            <div class="carrossel">
-                <div class="carrossel-img">
-                    <img src="./assets/massagem-pernas.png" width="320" height="320" alt="img-pernas">
-                </div>
-                <p class="procedure">Bambuterapia</p>
-                <div class="carrossel-price">
-                    <span>30 - 40 minutos</span>
-                    <span class="value">R$ 100,00</span>
-                </div>
-            </div>
-        </div>
-        <div class="slider">
-            <div class="carrossel">
-                <div class="carrossel-img">
-                    <img src="./assets/massagem-bucha.png" width="350" height="320" alt="img-bucha">
-                </div>
-                <p class="procedure">Pindas chinesas</p>
-                <div class="carrossel-price">
-                    <span>30 - 40 minutos</span>
-                    <span class="value">R$ 100,00</span>
-                </div>
-            </div>
-            <div class="carrossel">
-                <div class="carrossel-img">
-                    <img src="./assets/massagempedras.png" width="320" height="320" alt="img-pedras">
-                </div>
-                <p class="procedure">Pedras quentes</p>
-                <div class="carrossel-price">
-                    <span>30 - 40 minutos</span>
-                    <span class="value">R$ 100,00</span>
-                </div>
-            </div>
-            <div class="carrossel">
-                <div class="carrossel-img">
-                    <img src="./assets/massagem-pernas.png" width="320" height="320" alt="img-pernas">
-                </div>
-                <p class="procedure">Bambuterapia</p>
-                <div class="carrossel-price">
-                    <span>30 - 40 minutos</span>
-                    <span class="value">R$ 100,00</span>
-                </div>
-            </div>
-        </div>
-            <div class="next">
-                <svg xmlns="http://www.w3.org/2000/svg" width="70" height="71" viewBox="0 0 70 71" fill="none">
-                    <rect x="1.5" y="-1.5" width="67" height="67" rx="33.5" transform="matrix(1 0 0 -1 0 67.0698)"
-                        stroke="#3D6E6B" stroke-width="3" />
-                    <path d="M29 53.0698L46.85 35.2198L29 17.3698" stroke="#3D6E6B" stroke-width="3"
-                        stroke-linecap="round" />
-                </svg>
+                <div class="swiper-button-next swiper-navBtn"></div>
+                <div class="swiper-button-prev swiper-navBtn"></div>
+                <div class="swiper-pagination"></div>
             </div>
         </section>
 
-        <div class="pagination">
-            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 12 13" fill="none">
-                <circle cx="6" cy="6.42407" r="6" fill="#4F2541" />
-            </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 12 13" fill="none">
-                <circle cx="6" cy="6.42407" r="6" fill="#3D6E6B" fill-opacity="0.5" />
-            </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 12 13" fill="none">
-                <circle cx="6" cy="6.42407" r="6" fill="#3D6E6B" fill-opacity="0.5" />
-            </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 12 13" fill="none">
-                <circle cx="6" cy="6.42407" r="6" fill="#3D6E6B" fill-opacity="0.5" />
-            </svg>
-        </div>
-  </body>
+        
+    </body>
 </html>
